// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtificialIntelligenceController on files selection changed should calculate risk profile for not excluded files only 1`] = `
Object {
  "highRisk": 24,
  "lowRisk": 77,
  "moderateRisk": 0,
  "veryHighRisk": 0,
}
`;

exports[`ArtificialIntelligenceController on files selection changed should clear and calculate risk profile for Java map 1`] = `
Object {
  "highRisk": 15,
  "lowRisk": 85,
  "moderateRisk": 0,
  "veryHighRisk": 0,
}
`;

exports[`ArtificialIntelligenceController on files selection changed should create custom config suggestions 1`] = `
Array [
  Object {
    "from": 29,
    "generalCustomConfigId": "mocked",
    "max": 0,
    "metric": "functions",
    "min": 0,
    "outlierCustomConfigId": "mocked",
    "to": 44,
  },
  Object {
    "from": 48,
    "generalCustomConfigId": "mocked",
    "max": 0,
    "metric": "mcc",
    "min": 0,
    "to": 71,
  },
]
`;

exports[`ArtificialIntelligenceController on files selection changed should create custom config suggestions 2`] = `
Array [
  "rloc (real lines of code)",
]
`;
